--- a/app/css/ui-kit/filters.css
+++ b/app/css/ui-kit/filters.css
@@ -50,7 +50,7 @@
     }
 
     /* 2E8C70 */
-    .filter-darkSuccess {
+    .filter-greenPrompt {
         filter: invert(44%) sepia(52%) saturate(498%) hue-rotate(111deg)
             brightness(94%) contrast(86%);
     }
@@ -71,5 +71,11 @@
     .filter-notification-bell-dark {
         filter: invert(40%) sepia(48%) saturate(1566%) hue-rotate(221deg)
             brightness(99%) contrast(94%);
+    }
+
+    /* #A9A6BD */
+    .filter-gray {
+        filter: invert(71%) sepia(14%) saturate(317%) hue-rotate(208deg)
+            brightness(93%) contrast(86%);
     }
 }
