--- a/app/views/insiders/index.html.haml
+++ b/app/views/insiders/index.html.haml
@@ -2,7 +2,7 @@
   .lg-container
     .top.grid.grid-cols-1.md:grid-cols-2.gap-48.mb-64
       .top-lhs
-        %h1.text-h1.flex.items-center.gap-20.mb-8.text-48
+        %h1.text-h1.flex.items-center.gap-20.mb-8.lg:text-48.text-32
           Exercism Insiders
           = graphical_icon "insiders"
         %h3.text-h3.mb-16 Our way of saying thank you.
@@ -32,16 +32,16 @@
 
   .gradient-container
     .lg-container.relative
-      = graphical_icon "pixel-diamond", css_class: "left-[120px]"
-      = graphical_icon "pixel-emerald", css_class: "right-[159px] top-[180px]"
-      = graphical_icon "pixel-emoji", css_class: "right-[179px] -top-[16px]"
-      = graphical_icon "pixel-coin", css_class: "top-[172px] left-[176px]"
-      = graphical_icon "pixel-coin", css_class: "right-[28px] top-[66px]"
+      = graphical_icon "pixel-diamond", css_class: "left-[120px] opacity-50 lg:opacity-100 xs:block hidden"
+      = graphical_icon "pixel-emerald", css_class: "right-[159px] top-[180px] lg:block hidden"
+      = graphical_icon "pixel-emoji", css_class: "right-[179px] -top-[16px] opacity-50 lg:opacity-100"
+      = graphical_icon "pixel-coin", css_class: "top-[172px] left-[176px] lg:block hidden"
+      = graphical_icon "pixel-coin", css_class: "right-[28px] top-[66px] opacity-50 lg:opacity-100"
 
-      %h2.text-h1.mb-16 Offers from our partners
-      %p.text-p-large.mx-auto.mb-32{ class: "max-w-[800px]" }
+      %h2.text-h1.mb-16.relative Offers from our partners
+      %p.text-p-large.mx-auto.mb-32.relative{ class: "max-w-[800px]" }
         We're source great free trials and deals for you from commercial partners. It's their way of saying thank you for your work in Open Source.
-      %p.light-green-prompt.mb-64 We're aiming to add new partnerships and deals each month.
+      %p.light-green-prompt.mb-64.relative We're aiming to add new partnerships and deals each month.
       .features
         - @partners.each do |partner|
           .feature
