--- a/app/css/pages/journey.css
+++ b/app/css/pages/journey.css
@@ -8,9 +8,13 @@
         @apply relative;
 
         & .background {
-            @apply absolute;
+            @apply absolute overflow-hidden;
+            @apply flex justify-end;
+            @apply bg-cover;
+            background-image: url("hero-journey.svg");
             left: 0;
             right: 0;
+            top: 0;
             bottom: 0;
             & .bottom {
                 @apply absolute;
@@ -59,7 +63,7 @@
             width: 64px;
         }
         & h1 {
-            @apply text-64 leading-tight font-bold text-textColor1;
+            @apply text-64 text-center leading-none font-bold text-textColor1;
             @apply mb-8;
         }
         & .subtitle {
