--- a/app/views/insiders/index.html.haml
+++ b/app/views/insiders/index.html.haml
@@ -2,9 +2,9 @@
   .lg-container
     .top.grid.grid-cols-1.md:grid-cols-2.gap-48.mb-64
       .top-lhs
-        %h1.text-h1.flex.items-center.gap-20.mb-4.sm:mb-8.lg:text-48.text-30
+        %h1.text-h1.flex.items-center.gap-20.mb-4.sm:mb-8.lg:text-48.text-30.sm:text-32
           Exercism Insiders
-          = graphical_icon "insiders"
+          = graphical_icon "insiders", css_class: 'h-[32px] md:h-[64px] w-[32px] md:w-[64px]'
         %h3.text-h3.mb-16 Our way of saying thank you.
         %h5.launching Launching End of April 2023
         %p.text-p-xlarge.mb-24 Get behind the scenes access, Dark Mode, ChatGPT integration, offers from our partners, exclusive badges, and more.
@@ -32,16 +32,16 @@
 
   .gradient-container
     .lg-container.relative
-      = graphical_icon "pixel-diamond", css_class: "left-[120px] opacity-50 lg:opacity-100 xs:block hidden"
-      = graphical_icon "pixel-emerald", css_class: "right-[159px] top-[180px] lg:block hidden"
-      = graphical_icon "pixel-emoji", css_class: "right-[179px] -top-[16px] opacity-50 lg:opacity-100"
-      = graphical_icon "pixel-coin", css_class: "top-[172px] left-[176px] lg:block hidden"
-      = graphical_icon "pixel-coin", css_class: "right-[28px] top-[66px] opacity-50 lg:opacity-100"
+      = graphical_icon "pixel-diamond", css_class: "left-[120px] xl:block hidden"
+      = graphical_icon "pixel-emerald", css_class: "right-[159px] top-[180px] xl:block hidden"
+      = graphical_icon "pixel-emoji", css_class: "right-[179px] -top-[16px] xl:block hidden"
+      = graphical_icon "pixel-coin", css_class: "top-[172px] left-[176px] xl:block hidden"
+      = graphical_icon "pixel-coin", css_class: "right-[28px] top-[66px] xl:block hidden"
 
       %h2.text-h1.mb-16.relative Offers from our partners
       %p.text-p-large.mx-auto.mb-32.relative{ class: "max-w-[800px]" }
         We're source great free trials and deals for you from commercial partners. It's their way of saying thank you for your work in Open Source.
-      %p.light-green-prompt.mb-64.relative We're hoping to get the first six partnerships agreed before launch and will be adding more reguarly.
+      %p.light-green-prompt.mb-64.relative We're hoping to get several partnerships agreed before launch and will be aim to be adding 5-10 more each month.
       -#
         .features
           - @partners.each do |partner|
@@ -52,7 +52,7 @@
 
   .gradient-container.faqs
     .lg-container
-      %h2.text-h1.mb-40 The Nitty Gritty
+      %h2.text-h1.mb-40 The Nitty Gritty &amp; FAQs
       .flex.flex-col.gap-24.mx-auto{ class: "max-w-[940px]" }
         %details{ open: true }
           %summary What are the exact criteria for Insiders access?
@@ -79,7 +79,8 @@
           %summary I've donated via Paypal or GitHub Sponsors but don't have access.
           Due to technical limitations, we don't automatically get notified of recurring donors on PayPal or GitHub Sponsors.
           We manually sync these each day, so there may be a delay between you setting up your donation and gaining Insiders access.
-          Sorry for this - we're working on improving it.
+          Sorry for this - we're working on improving it before launch.
+          Be assured that if you've setup a recurring donation, we'll give you access!
 
         %details
           %summary What does Insiders cost?
