some insiders typos

--- a/app/views/insiders/index.html.haml
+++ b/app/views/insiders/index.html.haml
@@ -40,8 +40,8 @@
 
       %h2.text-h1.mb-16.relative Offers from our partners
       %p.text-p-large.mx-auto.mb-32.relative{ class: "max-w-[800px]" }
-        We're source great free trials and deals for you from commercial partners. It's their way of saying thank you for your work in Open Source.
-      %p.light-green-prompt.mb-64.relative We're hoping to get several partnerships agreed before launch and will be aim to be adding 5-10 more each month.
+        We've sourced some great free trials and deals from commercial partners. It's their way of saying thank you for your work in Open Source.
+      %p.light-green-prompt.mb-64.relative We're hoping to get several partnerships confirmed before launch and we're aiming to add 5-10 more each month.
       -#
         .features
           - @partners.each do |partner|
@@ -61,7 +61,7 @@
           %p.mb-4 To gain lifetime access you need one of the following:
           %ul.mb-16
             %li To be a founder or staff member
-            %li To be a founder or supermentor (100+ solutions mentored with a 95% positive rating)
+            %li To be a supermentor (100+ solutions mentored on a track with a 95% positive rating)
             %li To have a reputation equal or greater than 1,000
             %li To have donated $500 before Insiders launches
 
