--- a/app/views/insiders/index.html.haml
+++ b/app/views/insiders/index.html.haml
@@ -94,7 +94,7 @@
 
         %details
           %summary I need dark theme for accessiblity reasons, but I'm not an Insider.
-          We're creating a basic dark them that's suitable for people who struggle with light themes, which will launch at the same time as Insiders.
+          We're creating a basic dark theme that's suitable for people who struggle with light themes, which will launch at the same time as Insiders.
           It's not that pretty, but it'll mean you can use the site without issue!
 
         %details
@@ -109,4 +109,3 @@
           It is! You don't have to donate in order to use Exercism.
           All our production-ready educational features are entirely free.
           However, for those that are able and willing to support Exercism with their time or money, Insiders provides a way of us saying thank you, and taking them on our journey with us.
-
