--- a/app/views/insiders/index.html.haml
+++ b/app/views/insiders/index.html.haml
@@ -40,7 +40,7 @@
 
       %h2.text-h1.mb-16.relative Offers from our partners
       %p.text-p-large.mx-auto.mb-32.relative{ class: "max-w-[800px]" }
-        We've sourced some great free trials and deals from commercial partners. It's their way of saying thank you for your work in Open Source.
+        We're sourcing some great free trials and deals from commercial partners. It's their way of saying thank you for your work in Open Source.
       %p.light-green-prompt.mb-64.relative We're hoping to get several partnerships confirmed before launch and we're aiming to add 5-10 more each month.
       -#
         .features
