Fix british spelling

--- a/app/views/insiders/index.html.haml
+++ b/app/views/insiders/index.html.haml
@@ -99,7 +99,7 @@
 
         %details
           %summary How do I earn reputation?
-          Reputation is earnt by mentoring or contributing to Exercism.
+          Reputation is earned by mentoring or contributing to Exercism.
           You can also earn reputation by publishing your solutions, but that does not count towards Insiders access.
           You can check what actions result in what reputation by consulting #{link_to 'our docs', 'https://exercism.org/docs/using/product/reputation#h-acquisition-of-reputation'}.
           Check your #{link_to 'journey page', journey_path} to see where you're earning reputation.
