--- a/app/css/pages/community-solution-show.css
+++ b/app/css/pages/community-solution-show.css
@@ -136,7 +136,7 @@
                     & .info {
                         @apply flex-grow;
                         & .mentors {
-                            @apply mb-4;
+                            @apply mb-4 flex;
                             @apply text-16 leading-150 text-textColor2;
                             & strong {
                                 @apply font-semibold;
