--- a/app/views/tracks/community_solutions/show.html.haml
+++ b/app/views/tracks/community_solutions/show.html.haml
@@ -70,8 +70,10 @@
                 .face= avatar discussion.mentor
             .info
               .mentors
-                Mentored by
-                %strong= @mentor_discussions.map { |d| d.mentor.handle }.to_sentence
+                Mentored by&nbsp;
+                %strong= @mentor_discussions.map { |d| render(ViewComponents::HandleWithFlair.new(d.mentor.handle, d.mentor&.flair, size: "16px")) }.map(&:to_s).to_sentence.html_safe
+
+
               = link_to doc_path(:using, 'feedback'), class: 'more' do
                 = graphical_icon "info-circle"
                 What is this?
