--- a/app/views/settings/donations.html.haml
+++ b/app/views/settings/donations.html.haml
@@ -51,7 +51,7 @@
                 %td= number_to_currency(payment.amount_in_dollars)
                 %td= payment.subscription ? "Recurring donation" : "One-time donation"
                 %td
-                  = link_to payment.stripe_receipt_url, class: 'btn-enhanced btn-xs' do
+                  = link_to payment.external_receipt_url, class: 'btn-enhanced btn-xs' do
                     = graphical_icon "download"
                     %span View Receipt
 
