Update margin on solution row flairs

--- a/app/css/components/mentor/solution-row.css
+++ b/app/css/components/mentor/solution-row.css
@@ -36,6 +36,9 @@
                 & .c-icon {
                     @apply ml-8;
                 }
+                .handle-with-flair-icon {
+                    @apply m-0;
+                }
 
                 & .favorited {
                     height: 22px;
