--- a/app/views/tracks/mentor_discussions/_mentoring_in_progress.html.haml
+++ b/app/views/tracks/mentor_discussions/_mentoring_in_progress.html.haml
@@ -6,7 +6,7 @@
     .info
       %h2.flex
         You're being mentored by&nbsp;
-        %strong= render ViewComponents::HandleWithFlair.new(discussion.mentor.handle, discussion.mentor.flair, size: "20px")
+        %strong= render ViewComponents::HandleWithFlair.new(discussion.mentor.handle, discussion.mentor.flair, size: 20)
 
       .details
         - if discussion.mentor_finished?
