--- a/app/css/pages/settings.css
+++ b/app/css/pages/settings.css
@@ -263,6 +263,10 @@
             @apply text-16 leading-160 font-medium;
         }
     }
+
+    .--selected-theme {
+        @apply outline outline-4 outline-linkColor;
+    }
 }
 #page-settings-donations {
     & .subscription-box {
