Move logic to helper

--- a/app/views/profiles/_header.html.haml
+++ b/app/views/profiles/_header.html.haml
@@ -46,12 +46,7 @@
                 = graphical_icon :logo
                 .title Exercism Founder
             - else
-              - tags = []
-              - tags << { class: "tag staff", icon: :logo, title: "Exercism Staff" } if user.staff?
-              - tags << { class: "tag maintainer", icon: :maintaining, title: "Maintainer" } if user.maintainer?
-              - tags << { class: "tag maintainer", icon: :insiders, title: "Insider" } if %i[eligible eligible_lifetime].include?(user.insiders_status)
-
-              - tags.take(2).each do |tag|
+              - header_tags.each do |tag|
                 %div{ class: tag[:class] }
                   = graphical_icon tag[:icon]
                   .title= tag[:title]
