Update colors, add infomessages, set up buttons correctly

--- a/app/css/pages/settings.css
+++ b/app/css/pages/settings.css
@@ -265,7 +265,10 @@
     }
 
     .--selected-theme {
-        @apply outline outline-4 outline-linkColor;
+        @apply outline outline-4 outline-successColor;
+        + label {
+            @apply text-successColor text-15;
+        }
     }
 }
 #page-settings-donations {
