Add Theme Preferences Setting (#3696)
* Set up

* Add ThemeButtons

* Change wording slightly

* Tweaks

* Update colors, add infomessages, set up buttons correctly

* Add JS function to update theme pref

* Simplify function

* Update fn

* Change boolean name to be more descriptive

---------

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

--- a/app/css/pages/settings.css
+++ b/app/css/pages/settings.css
@@ -263,6 +263,13 @@
             @apply text-16 leading-160 font-medium;
         }
     }
+
+    .--selected-theme {
+        @apply outline outline-4 outline-successColor;
+        + label {
+            @apply text-successColor text-15;
+        }
+    }
 }
 #page-settings-donations {
     & .subscription-box {
