--- a/app/views/settings/user_preferences.html.haml
+++ b/app/views/settings/user_preferences.html.haml
@@ -8,3 +8,5 @@
       %section
         = render ReactComponents::Settings::UserPreferencesForm.new
 
+      %section
+        = render ReactComponents::Settings::ThemePreferenceForm.new
