change theme name

--- a/app/css/ui-kit/colors.css
+++ b/app/css/ui-kit/colors.css
@@ -409,13 +409,13 @@
 }
 
 @media (prefers-color-scheme: dark) {
-    .theme-unset {
+    .theme-system {
         @inline .theme-dark;
     }
 }
 
 @media (prefers-color-scheme: light) {
-    .theme-unset {
+    .theme-system {
         @inline .theme-light;
     }
 }
