--- a/app/css/components/header-with-bg.css
+++ b/app/css/components/header-with-bg.css
@@ -26,7 +26,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-    .theme-unset {
+    .theme-system {
         .c-header-with-bg {
             background: #191525 !important;
         }
@@ -34,7 +34,7 @@
 }
 
 @media (prefers-color-scheme: light) {
-    .theme-unset {
+    .theme-system {
         .c-header-with-bg {
             background: linear-gradient(
                     180deg,
